# Distance-Updater

./: .dockerignore  .env.example  .gitignore  README.md  database.py  distancesscripts.md  distancias.csv  distancias_export.csv  export_distances.py  googletools.py  main.py  nixpacks.toml  pyproject.toml  run_legacy.py  structure.md
cursor/rules/: convention.md
tests/: test_distance.py
